--- a/overlay/package.json
+++ b/overlay/package.json
@@ -1,17 +1,17 @@
 {
   "name": "memeover",
   "productName": "memeover",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "description": "An overlay app to integrate to Discord",
   "main": ".vite/build/main.js",
   "scripts": {
     "start": "electron-forge start",
-    "package": "electron-forge package --platform=win32",
-    "package:linux": "electron-forge package",
-    "make": "electron-forge make --platform=win32",
-    "make:linux": "electron-forge make",
-    "publish": "env-cmd electron-forge publish --platform=win32",
-    "publish:linux": "env-cmd electron-forge publish",
+    "package:windows": "electron-forge package --platform=win32",
+    "package": "electron-forge package",
+    "make:windows": "electron-forge make --platform=win32",
+    "make": "electron-forge make",
+    "publish:windows": "env-cmd electron-forge publish --platform=win32",
+    "publish": "env-cmd electron-forge publish",
     "lint": "eslint --ext .ts,.tsx ."
   },
   "devDependencies": {
