--- a/.github/workflows/overlay.yml
+++ b/.github/workflows/overlay.yml
@@ -77,7 +77,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   publish-macos:
-    runs-on: windows-latest
+    runs-on: macos-latest
     permissions: write-all
 
     steps:
