--- a/docker/dockerfile
+++ b/docker/dockerfile
@@ -1,5 +1,5 @@
 # Start with the official Go image for building
-FROM golang:1.18-alpine AS builder
+FROM golang:1.22.4 AS build-stage
 
 # Set the Current Working Directory inside the container
 WORKDIR /app
@@ -11,7 +11,7 @@ COPY ../bot/go.mod ../bot/go.sum ./
 RUN go mod download
 
 # Copy the source from the current directory to the Working Directory inside the container
-COPY ../bot .
+COPY ../bot/*.go ./
 
 # Build the Go app
 RUN go build -o discord-bot .
@@ -23,7 +23,7 @@ FROM alpine:latest
 WORKDIR /app
 
 # Copy the Pre-built binary file from the previous stage
-COPY --from=builder /app/discord-bot .
+COPY --from=build-stage /app/discord-bot .
 
 # Command to run the executable
 CMD ["./discord-bot"]
