--- a/.github/workflows/overlay.yml
+++ b/.github/workflows/overlay.yml
@@ -6,7 +6,34 @@ on:
       - main
 
 jobs:
+  lint:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+
+      - name: Cache Yarn dependencies
+        uses: actions/cache@v4
+        with:
+          path: ~/.yarn/cache
+          key: ${{ runner.os }}-yarn-${{ hashFiles('overlay/yarn.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-yarn-
+
+      - name: Install dependencies
+        run: cd overlay && yarn install
+
+      - name: Lint
+        run: cd overlay && yarn run lint
+
   publish:
+    needs: ['lint']
     strategy:
       matrix:
         os:
