--- a/overlay/package.json
+++ b/overlay/package.json
@@ -1,6 +1,6 @@
 {
   "name": "memeover",
-  "productName": "memeover",
+  "productName": "MemeOver",
   "version": "0.1.3",
   "description": "An overlay app to integrate to Discord",
   "main": ".vite/build/main.js",
@@ -32,15 +32,19 @@
     "@electron-forge/plugin-vite": "^7.4.0",
     "@electron-forge/publisher-github": "^7.4.0",
     "@electron/fuses": "^1.8.0",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
+    "@vitejs/plugin-react": "^4.3.1",
     "electron": "30.0.9",
     "eslint": "^8.0.1",
     "eslint-plugin-import": "^2.25.0",
     "ts-node": "^10.0.0",
     "typescript": "~4.5.4",
     "update-electron-app": "^3.0.0",
-    "vite": "^5.0.12"
+    "vite": "^5.0.12",
+    "vite-tsconfig-paths": "^4.3.2"
   },
   "keywords": [],
   "author": {
@@ -49,6 +53,8 @@
   },
   "license": "MIT",
   "dependencies": {
-    "electron-squirrel-startup": "^1.0.1"
+    "electron-squirrel-startup": "^1.0.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   }
 }
