--- a/overlay/package.json
+++ b/overlay/package.json
@@ -1,7 +1,7 @@
 {
   "name": "memeover",
-  "productName": "MemeOver",
-  "version": "0.1.3",
+  "productName": "memeover",
+  "version": "0.1.4",
   "description": "An overlay app to integrate to Discord",
   "main": ".vite/build/main.js",
   "repository": "https://github.com/SimonHazard/MemeOver",
