--- a/.github/workflows/overlay.yml
+++ b/.github/workflows/overlay.yml
@@ -10,30 +10,17 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
+      - name: Checkout
         uses: actions/checkout@v4
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
+      - name: Setup Biome
+        uses: biomejs/setup-biome@v2
         with:
-          node-version: '20'
-
-      - name: Cache Yarn dependencies
-        uses: actions/cache@v4
-        with:
-          path: ~/.yarn/cache
-          key: ${{ runner.os }}-yarn-${{ hashFiles('overlay/yarn.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-yarn-
-
-      - name: Install dependencies
-        run: cd overlay && yarn install
-
-      - name: Lint
-        run: cd overlay && yarn run lint
+          version: latest
+      - name: Run Biome
+        run: biome ci .
 
   publish:
-    needs: ['lint']
+    needs: ["lint"]
     strategy:
       matrix:
         os:
@@ -52,7 +39,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '20'
+          node-version: "20"
 
       - name: Cache Yarn dependencies
         uses: actions/cache@v4
