--- a/overlay/package.json
+++ b/overlay/package.json
@@ -36,7 +36,9 @@
 		"@types/react": "^18.3.3",
 		"@types/react-dom": "^18.3.0",
 		"@vitejs/plugin-react": "^4.3.1",
+		"autoprefixer": "^10.4.19",
 		"electron": "30.0.9",
+		"postcss": "^8.4.38",
 		"tailwindcss": "^3.4.4",
 		"ts-node": "^10.0.0",
 		"typescript": "~4.5.4",
