--- a/.github/workflows/overlay.yml
+++ b/.github/workflows/overlay.yml
@@ -17,7 +17,7 @@ jobs:
         with:
           version: latest
       - name: Run Biome
-        run: biome ci .
+        run: biome ci overlay
 
   publish:
     needs: ['lint']
@@ -55,30 +55,19 @@ jobs:
       - uses: pnpm/action-setup@v4
         name: Install pnpm
         with:
-          version: 8
-          run_install: false
+          version: 9
 
       - name: Install Node.js
         uses: actions/setup-node@v4
         with:
           node-version: 20
           cache: 'pnpm'
-
-      - name: Get pnpm store directory
-        shell: bash
-        run: |
-          echo "STORE_PATH=$(pnpm store path --silent)" >> $GITHUB_ENV
-
-      - uses: actions/cache@v4
-        name: Setup pnpm cache
-        with:
-          path: ${{ env.STORE_PATH }}
-          key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
-          restore-keys: |
-            ${{ runner.os }}-pnpm-store-
+          cache-dependency-path: 'overlay'
 
       - name: install frontend dependencies
-        run: pnpm install
+        run: |
+          cd overlay
+          pnpm install
 
       - uses: tauri-apps/tauri-action@v0
         env:
@@ -90,3 +79,4 @@ jobs:
           releaseDraft: true
           prerelease: false
           args: ${{ matrix.args }}
+          projectPath: 'overlay'
