--- a/overlay/package.json
+++ b/overlay/package.json
@@ -1,8 +1,9 @@
 {
 	"name": "memeover",
 	"private": true,
-	"version": "0.2.0",
+	"version": "0.2.1",
 	"type": "module",
+	"license": "MIT",
 	"scripts": {
 		"dev": "vite",
 		"build": "tsc -b && vite build",
