--- a/.github/workflows/bot.yml
+++ b/.github/workflows/bot.yml
@@ -4,6 +4,8 @@ on:
   push:
     branches:
       - main
+    paths:
+      - 'bot/**'
 
 # Defines two custom environment variables for the workflow. These are used for the Container registry domain, and a name for the Docker image that this workflow builds.
 env:
@@ -49,7 +51,7 @@ jobs:
         id: push
         uses: docker/build-push-action@f2a1d5e99d037542a71f64918e516c093c6f3fc4
         with:
-          context: .
+          context: ./bot
           file: ./bot/Dockerfile
           push: true
           tags: ${{ steps.meta.outputs.tags }}
