--- a/bot/Dockerfile
+++ b/bot/Dockerfile
@@ -5,25 +5,18 @@ FROM golang:1.22.4 AS build-stage
 WORKDIR /app
 
 # Copy go.mod and go.sum files
-COPY bot/go.mod bot/go.sum ./
+COPY go.mod go.sum ./
 
 # Download all dependencies. Dependencies will be cached if the go.mod and go.sum files are not changed
 RUN go mod download
 
-# Copy the source from the current directory to the Working Directory inside the container
-COPY bot/*.go ./
+# Copy the source code from the current directory to the Working Directory inside the container
+COPY *.go ./
 
 # Build the Go app
-RUN go build -o discord-bot .
+RUN CGO_ENABLED=0 GOOS=linux go build -o /discord-bot
 
-# Start a new stage from scratch
-FROM alpine:latest
-
-# Set the Current Working Directory inside the container
-WORKDIR /app
-
-# Copy the Pre-built binary file from the previous stage
-COPY --from=build-stage /app/discord-bot .
+EXPOSE 8080
 
 # Command to run the executable
-CMD ["./discord-bot"]
+CMD ["/discord-bot"]
