--- a/overlay/src-tauri/Cargo.toml
+++ b/overlay/src-tauri/Cargo.toml
@@ -20,4 +20,4 @@ tauri-build = { version = "2.0.0-beta.17", features = [] }
 [dependencies]
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
-tauri = { version = "2.0.0-beta.22", features = [] }
+tauri = { version = "2.0.0-beta.22", features = ["tray-icon"] }
