--- a/overlay/package.json
+++ b/overlay/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "memeover",
 	"private": true,
-	"version": "0.4.1",
+	"version": "0.4.2",
 	"type": "module",
 	"license": "MIT",
 	"scripts": {
@@ -17,7 +17,7 @@
 	},
 	"devDependencies": {
 		"@biomejs/biome": "1.8.3",
-		"@tauri-apps/cli": "2.0.0-beta.20",
+		"@tauri-apps/cli": "2.0.0-rc.12",
 		"@types/node": "^22.5.4",
 		"@types/react": "^18.3.5",
 		"@types/react-dom": "^18.3.0",
