--- a/overlay/src-tauri/Cargo.toml
+++ b/overlay/src-tauri/Cargo.toml
@@ -15,9 +15,9 @@ name = "app_lib"
 crate-type = ["staticlib", "cdylib", "rlib"]
 
 [build-dependencies]
-tauri-build = { version = "2.0.0-beta.17", features = [] }
+tauri-build = { version = "2.0.0-rc.0", features = [] }
 
 [dependencies]
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
-tauri = { version = "2.0.0-beta.22", features = ["tray-icon"] }
+tauri = { version = "2.0.0-rc.0", features = ["tray-icon"] }
