--- a/overlay/package.json
+++ b/overlay/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "memeover",
 	"private": true,
-	"version": "0.4.3",
+	"version": "0.4.4",
 	"type": "module",
 	"license": "MIT",
 	"scripts": {
@@ -17,7 +17,8 @@
 	},
 	"devDependencies": {
 		"@biomejs/biome": "1.9.4",
-		"@tauri-apps/cli": "2.0.0-rc.12",
+		"@tauri-apps/api": "^2.0.3",
+		"@tauri-apps/cli": "2.0.4",
 		"@types/node": "^22.8.2",
 		"@types/react": "^18.3.12",
 		"@types/react-dom": "^18.3.1",
