--- a/overlay/src-tauri/Cargo.toml
+++ b/overlay/src-tauri/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
 name = "memeover"
-version = "0.2.2"
+version = "0.4.4"
 description = "MemeOver app"
 authors = ["you"]
 license = "MIT"
 repository = ""
 edition = "2021"
-rust-version = "1.70"
+rust-version = "1.82"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -15,9 +15,9 @@ name = "app_lib"
 crate-type = ["staticlib", "cdylib", "rlib"]
 
 [build-dependencies]
-tauri-build = { version = "2.0.0-rc.0", features = [] }
+tauri-build = { version = "2.0.2", features = [] }
 
 [dependencies]
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
-tauri = { version = "2.0.0-rc.0", features = ["tray-icon"] }
+tauri = { version = "2.0.6", features = ["tray-icon"] }
