--- a/overlay/src-tauri/Cargo.toml
+++ b/overlay/src-tauri/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "memeover"
-version = "0.4.4"
+version = "0.4.5"
 description = "MemeOver app"
 authors = ["you"]
 license = "MIT"
@@ -20,4 +20,4 @@ tauri-build = { version = "2.0.2", features = [] }
 [dependencies]
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
-tauri = { version = "2.0.6", features = ["tray-icon"] }
+tauri = { version = "2.0.6", features = [ "macos-private-api", "tray-icon"] }
