--- a/.github/workflows/bot.yml
+++ b/.github/workflows/bot.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - main
     paths:
-      - 'bot/**'
+      - 'discord-bot/**'
 
 # Defines two custom environment variables for the workflow. These are used for the Container registry domain, and a name for the Docker image that this workflow builds.
 env:
@@ -51,8 +51,8 @@ jobs:
         id: push
         uses: docker/build-push-action@v6
         with:
-          context: ./bot
-          file: ./bot/Dockerfile
+          context: ./discord-bot
+          file: ./discord-bot/Dockerfile
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
