--- a/memeover-app/package.json
+++ b/memeover-app/package.json
@@ -7,7 +7,8 @@
 		"dev": "vite",
 		"build": "tsc && vite build",
 		"preview": "vite preview",
-		"tauri": "tauri"
+		"tauri": "tauri",
+		"lint": "pnpm biome check --write ./src"
 	},
 	"dependencies": {
 		"@tailwindcss/vite": "^4.0.12",
@@ -19,6 +20,7 @@
 		"tailwindcss": "^4.0.12"
 	},
 	"devDependencies": {
+		"@biomejs/biome": "1.9.4",
 		"@tauri-apps/cli": "^2",
 		"@types/react": "^19",
 		"@types/react-dom": "^19",
